chore: add licenses

--- a/crates/proptest/Cargo.toml
+++ b/crates/proptest/Cargo.toml
@@ -2,6 +2,7 @@
 name = "estoa-proptest"
 version = "0.0.1"
 edition = "2024"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 estoa-proptest-macros = { path = "../proptest-macros" }
