--- a/crates/crdts/Cargo.toml
+++ b/crates/crdts/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "estoa-crdts"
+description = "A well-tested, flexible CRDT library"
 version = "0.0.1"
 edition = "2024"
 license = "MIT OR Apache-2.0"
