--- a/crates/proptest-macros/Cargo.toml
+++ b/crates/proptest-macros/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "estoa-proptest-macros"
+description = "Macros for the estoa-proptest-crate"
 version = "0.0.1"
 edition = "2024"
 license = "MIT OR Apache-2.0"
